# emma

./: .clangd  .gitignore  CMakeLists.txt  Makefile
public/: index.html
public/scripts/: Emma.data  Emma.js  Emma.wasm  wgpu_init.js
src/: main.c  main.cpp
src/runtime/: allocator.c  allocator.h
src/runtime/canvas/: core.cpp  core.h
src/runtime/geometry/: boundbox.c  boundbox.h  boundbox_frame.c  boundbox_frame.h  core.h  vector.h
src/runtime/layouts/: container.cpp  container.hpp  nav_bar.cpp  nav_bar.hpp
src/runtime/manager/: allocator.c  allocator.h  allocator_list.h  atlas.c  atlas.h  module.c  module.h  ui_sprite.c  ui_sprite.h  unit.c  unit.h  viewport.c  viewport.h
src/runtime/node/: canvas.c  canvas.cpp  canvas.h  connector.c  connector.h  connector_handle.c  connector_handle.h  frame.c  frame.h  handle.c  handle.h  heatmap.c  heatmap.h  octagon.c  octagon.h  transform_handle.c  transform_handle.h
src/runtime/widgets/: canvas.cpp  canvas.hpp  connector.cpp  connector.hpp  connector_handle.cpp  connector_handle.hpp  core.hpp  frame.cpp  frame.hpp  grid_background.cpp  grid_background.hpp  handle.cpp  handle.hpp  heatmap.cpp  heatmap.hpp  module.cpp  module.hpp  octagon.cpp  octagon.hpp  tool_bar.cpp  tool_bar.hpp  tool_button.cpp  tool_button.hpp  transform_box.cpp  transform_box.hpp  transform_handle.cpp  transform_handle.hpp  utils.hpp
src/utils/: id.h  input.h
